[gd_scene load_steps=5 format=2]

[ext_resource path="res://Desert/Sphinx/Sphinx.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]

[node name="Enemy_Sphinx" type="KinematicBody2D"]
position = Vector2( 318, 208 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="moveTimer" type="Timer" parent="."]
autostart = true

[node name="dieTimer" type="Timer" parent="."]

[node name="SphinxPosition" type="Position2D" parent="."]

[connection signal="timeout" from="moveTimer" to="." method="_on_moveTimer_timeout"]
[connection signal="timeout" from="dieTimer" to="." method="_on_dieTimer_timeout"]
